Chenge after review and Test Apex

--- a/force-app/main/default/classes/NoteController.cls
+++ b/force-app/main/default/classes/NoteController.cls
@@ -1,4 +1,5 @@
     public with sharing class NoteController {
+        
         @AuraEnabled
         public static Note__c saveData(String label, String description ) {
             try {
@@ -15,15 +16,7 @@
                 System.debug('Error saving data: ' + e.getMessage());
                 throw new AuraHandledException('Error saving data: An error occurred while saving the data.');
             }
-                
-            
-            // insert newNote;
-
-            // return newNote;
-        // } catch (Exception e) {
-        //     System.debug('Error saving data: ' + e.getMessage());
-        //     return null;
-        // }
+    
     }
     
     @AuraEnabled
@@ -31,7 +24,8 @@
         
             try {
                 List<Note__c> noteToDelete = [SELECT Id FROM Note__c WHERE Id = :noteId LIMIT 1];
-                if (!noteToDelete.isEmpty()) {
+                //List<Note__c> noteToDelete is collection and beacause  if does not use  List<Note__c>   It's  erorr Emppty()
+                if (!noteToDelete.isEmpty()) { 
                     delete noteToDelete;
                     return 'Success';
                 } else {
@@ -49,16 +43,24 @@
 
     @AuraEnabled
     public static List<Note__c> searchNotesByDate(String searchDate){
+        System.debug('Param: ' + searchDate);
         try{
-            Date searchDateValue = Date.valueOf(searchDate);
+            Datetime startDate = Date.valueOf(searchDate);
+            Datetime endDate = startDate.addDays(1);
 
-            List<Note__c> notes = [SELECT Id, Label__c, Description__c, Created_Date__c FROM Note__c WHERE Created_Date__c = :searchDateValue ORDER BY Created_Date__c DESC];
-
+            System.debug('Param1 ' + startDate);
+            List<Note__c> notes = [SELECT Id, Label__c, Description__c, Created_Date__c 
+                                   FROM Note__c 
+                                   WHERE Created_Date__c >= :startDate 
+                                    AND Created_Date__c <= :endDate 
+                                    ORDER BY Created_Date__c DESC];
+            // List<Note__c> notes = [SELECT Id, Label__c, Description__c, Created_Date__c FROM Note__c ORDER BY Created_Date__c DESC];
+            System.debug('Param2 ' + notes);
             return notes;
         } catch (Exception e) {
-            throw new AuraHandledException('Error searching notes by datw: ' + e.getMessage());
+            throw new AuraHandledException('Error searching notes by date: ' + e.getMessage());
         } 
-        
+            
     }
 
     @AuraEnabled
@@ -72,7 +74,7 @@
         
         Note__c note = [SELECT Id FROM Note__c WHERE Id = :noteId LIMIT 1];
             try{
-                if(note !=  null){
+                // if(note !=  null){
                     note.Label__c = changeLabelValue;
                     note.Description__c = changeDescriptionValue;
                     note.Created_Date__c = Datetime.now();
@@ -81,14 +83,14 @@
                     System.debug('Update========' + note); 
                 
                     return note;
-                }else{
-                    throw new AuraHandledException('Note not ');
-                }
+                // }else{
+            // /        return null;
+                // }
             } catch (Exception e) {
                  System.debug('Note is not defined====');
                  throw new AuraHandledException('Error upDating :' + e.getMessage());
             }
-        
+            
     }
     
 }
