--- a/force-app/main/default/classes/NoteController.cls
+++ b/force-app/main/default/classes/NoteController.cls
@@ -20,16 +20,13 @@
     }
     
     @AuraEnabled
-    public static String deleteNoteOnServer(String noteId) {
+    public static void deleteNoteOnServer(String noteId) {
         
             try {
                 List<Note__c> noteToDelete = [SELECT Id FROM Note__c WHERE Id = :noteId LIMIT 1];
                 //List<Note__c> noteToDelete is collection and beacause  if does not use  List<Note__c>   It's  erorr Emppty()
                 if (!noteToDelete.isEmpty()) { 
                     delete noteToDelete;
-                    return 'Success';
-                } else {
-                    return 'Note not found';
                 }
             } catch (Exception e) {
                 throw new AuraHandledException('Error deleting data: ' + e.getMessage());
@@ -54,8 +51,8 @@
                                    WHERE Created_Date__c >= :startDate 
                                     AND Created_Date__c <= :endDate 
                                     ORDER BY Created_Date__c DESC];
-            // List<Note__c> notes = [SELECT Id, Label__c, Description__c, Created_Date__c FROM Note__c ORDER BY Created_Date__c DESC];
             System.debug('Param2 ' + notes);
+            
             return notes;
         } catch (Exception e) {
             throw new AuraHandledException('Error searching notes by date: ' + e.getMessage());
@@ -72,20 +69,22 @@
         System.debug('changeDescriptionValue:' + changeDescriptionValue);
         
         
-        Note__c note = [SELECT Id FROM Note__c WHERE Id = :noteId LIMIT 1];
+        // Note__c note = [SELECT Id FROM Note__c WHERE Id = :noteId LIMIT 1];
             try{
                 // if(note !=  null){
-                    note.Label__c = changeLabelValue;
-                    note.Description__c = changeDescriptionValue;
-                    note.Created_Date__c = Datetime.now();
+                    Note__c note = new Note__c(id = noteId,
+                                                Label__c = changeLabelValue,
+                                                 Description__c = changeDescriptionValue,
+                                                Created_Date__c = Datetime.now());
+                    
+                    // note.Label__c = changeLabelValue;
+                    // note.Description__c = changeDescriptionValue;
+                    // note.Created_Date__c = Datetime.now();
                     
                     update note; 
                     System.debug('Update========' + note); 
                 
                     return note;
-                // }else{
-            // /        return null;
-                // }
             } catch (Exception e) {
                  System.debug('Note is not defined====');
                  throw new AuraHandledException('Error upDating :' + e.getMessage());
