--- a/force-app/main/default/classes/ContactTriggerHandler_Test.cls
+++ b/force-app/main/default/classes/ContactTriggerHandler_Test.cls
@@ -1,58 +1,58 @@
 @isTest
 public class ContactTriggerHandler_Test {
 
-    @isTest
-    static void testUpdateContactsFieldAfter() {
-        // Created test accounts and cintacts
-        List<Account> testAcc = new List<Account>();
-        List<Contact> testCont = new List<Contact>();
+    @TestSetup
+    static void createData() {
+        //create a new account and contact
+        List<Account> testAccouts = new List<Account>();
+        List<Contact> testContacts = new List<Contact>();
         
         for (Integer i = 0; i < 5; i++) {
-            Account acc = new Account(Name = 'T&T', AccountNumber = 'WR' + i);
-            testAcc.add(acc);
+            Account acc = new Account(Name = 'T&T' + i, AccountNumber = 'WR' + i);
+            testAccouts.add(acc);
         }
-        
-        insert testAcc;   
-        for(Account a : testAcc) {    
+        insert testAccouts;
+
+        for(Account a : testAccouts) {    
             for (Integer j = 0; j < 5; j++) {
                 Contact con = new Contact(
                     AccountId = a.Id,
                     Salutation = 'Mr.',
                     LastName = 'ContactLastName' + j, 
-                    FirstName = 'ContactFirstName' + j
+                    FirstName = 'ContactFirstName' + j,
+                    Level__c = 'Secondary'
+                    
                 );
-                testCont.add(con);
+                testContacts.add(con);
             }
         }    
-        insert testCont;
-        // Modify account fields
-
-        for(Account a : testAcc ){
-            if(a.id == testAcc[0].id){
-                a.Type = 'Prospect';
-                a.AccountNumber = '1112';   
-            }else if(a.id == testAcc[1].id){
-                a.Type = 'Installation Partner';
-                a.AccountNumber = 'w1111';
-            }
-        }
-
-        update testAcc; 
-
-        List<Contact> updateConts = [SELECT Id, Number__c, Level__c, AccountId FROM Contact WHERE AccountId  IN :testAcc];
+        insert testContacts;
         
-        // System.assertEquals(10, updateConts.size(), '10  contacts not updated');
+    }
+
+    @isTest
+    static void testUpdateContactsFieldAfter() {
+
+        // Modify account fields
+        List<Account>  accountForUpdate = [SELECT Id, Type, AccountNumber FROM Account LIMIT 2];
+
+        accountForUpdate[0].Type = 'Prospect';
+        accountForUpdate[0].AccountNumber = '1112';
+        accountForUpdate[1].Type = 'Installation Partner';
+        accountForUpdate[1].AccountNumber = 'w1111';
+        update accountForUpdate; 
+
+        List<Contact> updateConts = [SELECT Id, Number__c, Level__c, AccountId FROM Contact WHERE AccountId  IN :accountForUpdate];
+        System.assertEquals(10, updateConts.size(), '10  contacts not updated');
 
         for(Contact con : updateConts) {
-            if(con.AccountId == testAcc[0].id){
+            if(con.AccountId == accountForUpdate[0].id) {
                 System.assertEquals('1112', con.Number__c, 'Contacts with field Number is not updated');
                 System.assertEquals('Secondary', con.Level__c, 'Contacts with field Level is not updated');
-            }else if(con.AccountId == testAcc[1].id){
+            }else if(con.AccountId == accountForUpdate[1].id) {
                 System.assertEquals('Primary', con.Level__c, 'Contacts with field Level is not updated');
                 System.assertEquals('w1111', con.Number__c, 'Contacts with field Number is not updated');
             }
-            // System.assertNotEquals(null, con.Number__c, 'Contacts are not updated');
-            // System.assertNotEquals(null, con.Level__c, 'Contacts are not updated');
 
         }
         
@@ -60,51 +60,25 @@ public class ContactTriggerHandler_Test {
 
     @isTest
     static void testUpdateContactsAllFieldAfter() {
-        //create a new account and contact
-        List<Account> testAcc = new List<Account>();
-        List<Contact> testCont = new List<Contact>();
         
-        for (Integer i = 0; i < 5; i++) {
-            Account acc = new Account(Name = 'T&T', AccountNumber = 'WR' + i);
-            testAcc.add(acc);
-        }
-        
-        insert testAcc;   
-        for(Account a : testAcc) {    
-            for (Integer j = 0; j < 5; j++) {
-                Contact con = new Contact(
-                    AccountId = a.Id,
-                    Salutation = 'Mr.',
-                    LastName = 'ContactLastName' + j, 
-                    FirstName = 'ContactFirstName' + j
-                );
-                testCont.add(con);
-            }
-        }    
-        insert testCont;
+        List<Account> accounts = [SELECT Id, Type, AccountNumber FROM Account LIMIT 2];
+        List<Contact> contacts = [SELECT Id, AccountId, Level__c FROM Contact WHERE AccountID IN :accounts];
 
         // Modify contact field
-
-        for (Contact con : testCont){
-            if(con.AccountId == testAcc[0].Id){
-                con.Level__c = 'Secondary';    
-            }else if(con.AccountId == testAcc[1].Id) {
-                con.Level__c = 'Primary'; 
-            }
-        }
-        update testCont;
+        contacts[0].Level__c = 'Tertiary';
+        contacts[9].Level__c = 'Primary';
+        update contacts;
 
         // Verify that the contact's Level__c field is updated
-        
-        List<Contact> updateContacts = [SELECT Id, Level__c, AccountId, Number__c FROM Contact WHERE  AccountId IN :testAcc];
-        // System.assertEquals(10, updateContacts.size(), '10  contacts not updated');
+        List<Contact> updateContacts = [SELECT Id, Level__c, AccountId, Number__c FROM Contact WHERE  AccountId IN :accounts];
+        System.assertEquals(10, updateContacts.size(), '10  contacts not contacts ');
 
-        for(Contact contact : updateContacts){
-            if(contact.AccountId == testAcc[0].Id){
-                System.assertEquals('Secondary', contact.Level__c, 'Contact Level__c field not updated');
+        for(Contact contact : updateContacts) {
+            if(contact.AccountId == accounts[0].Id) {
+                System.assertEquals('Tertiary', contact.Level__c, 'Contact Level__c field not updated fot accouts[0]');
 
-            }else if(contact.AccountId == testAcc[1].id){
-                System.assertEquals('Primary', contact.Level__c, 'Contact Level__c field not updated');
+            } else if(contact.AccountId == accounts[1].id) {
+                System.assertEquals('Primary', contact.Level__c, 'Contact Level__c field not updated fot accounts[1]');
             }
         
         }
